[package]
name = "safe-bytes"
version = "0.1.1"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "Helper crate to read bytes representation of structs safely"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/safe-bytes"
keywords = ["no_std", "bytes"]
readme = "README.md"
repository = "https://github.com/zakarumych/safe-bytes"

[dependencies]
safe-bytes-derive = { version = "=0.1.1", path = "safe-bytes-derive" }
