[package]
name = "safe-bytes-derive"
version = "0.1.1"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "Helper crate to read bytes representation of structs safely"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/safe-bytes"
keywords = ["no_std", "bytes"]
repository = "https://github.com/zakarumych/safe-bytes"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"
